{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 23,
  "lineage": "1c5ec0d5-9d77-b951-3202-c112098012a3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "egress_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:530260462866:security-group/sg-0f2bf9f8f8ded4bd7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f2bf9f8f8ded4bd7",
            "ingress": [],
            "name": "egress_all",
            "name_prefix": "",
            "owner_id": "530260462866",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-497f902f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:530260462866:security-group/sg-01b6cd9a82c638f09",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-01b6cd9a82c638f09",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ingress_http",
            "name_prefix": "",
            "owner_id": "530260462866",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-497f902f"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ingress_ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:530260462866:security-group/sg-01a1375c9e833c114",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-01a1375c9e833c114",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ingress_ssh",
            "name_prefix": "",
            "owner_id": "530260462866",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-497f902f"
          }
        }
      ]
    }
  ]
}